...
    </dependencies>
    <scenes>
        <!--Акции-->
        <scene sceneID="tML-6j-5VJ">
            <objects>
                <splitViewController id="4zP-e4-RXe" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Акции" image="Stocks Tab Bar Icons" id="zjd-fe-DDi"/>
                    <connections>
                        <segue destination="dkV-cA-SYL" kind="relationship" relationship="masterViewController" id="rhY-HE-F6m"/>
                        <segue destination="cNj-yw-pIJ" kind="relationship" relationship="detailViewController" id="ejo-lG-tYL"/>
                    </connections>
                </splitViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="sGc-Fx-wNf" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                                        </label>
                                    </subviews>
                                </tableViewCellContentView>
                            </tableViewCell>
                        </prototypes>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="stockListTable"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
                            <outlet property="dataSource" destination="fUO-k0-423" id="jQN-MY-EY6"/>
                            <outlet property="delegate" destination="fUO-k0-423" id="tvZ-tM-Cap"/>
                        </connections>
                    </tableView>
...
                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="0f7-go-OuB">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </tabBar>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="RootTabBar"/>
                    </userDefinedRuntimeAttributes>
                    <connections>
                        <segue destination="4zP-e4-RXe" kind="relationship" relationship="viewControllers" id="MJp-i9-cic"/>
                        <segue destination="PPl-0T-OJg" kind="relationship" relationship="viewControllers" id="858-fv-3km"/>
                    </connections>
                </tabBarController>
...
                            <outlet property="delegate" destination="Fkl-nE-s7a" id="EIk-ke-9YX"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" id="qmW-88-Ygl">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ryf-yM-X1R">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="newStake"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <segue destination="H8y-fG-WMx" kind="presentation" id="R2v-jG-Hbj"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                            <outlet property="delegate" destination="w4Z-OW-IKb" id="AYa-Q5-MGc"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" id="Mqb-AG-2d6">
                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="Jwb-3X-U61">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="cancelStake"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <action selector="cancelButtonPressed:" destination="w4Z-OW-IKb" id="7tj-3z-86w"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="done" id="9Pc-mm-Ia9">
...
            <point key="canvasLocation" x="2559.375" y="186.97183098591549"/>
        </scene>
        <!--Портфолио-->
        <scene sceneID="6v6-re-Bsl">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="PPl-0T-OJg" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Портфолио" image="Portfolio  Tab Bar Icons" id="gqh-ou-7YZ"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5s7-1e-Ucq">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
