...
        let sharePriceToolbar = UIToolbar()
        let sharePricedoneButton = UIBarButtonItem(barButtonSystemItem: .done, target: self, action: #selector(sharePriceEntered))
        sharePriceToolbar.setItems([flexibleSpace, sharePricedoneButton], animated: true)
        sharePriceTextField.inputAccessoryView = sharePriceToolbar
        sharePriceToolbar.sizeToFit()
        
        self.navigationItem.title = "Новая Позиция"

    }
    
    // MARK: - Picker View methods
    func numberOfComponents(in pickerView: UIPickerView) -> Int {
        switch pickerView.accessibilityLabel! {
...
